--- a/assets/sass/partials/layout/_footer.sass
+++ b/assets/sass/partials/layout/_footer.sass
@@ -9,6 +9,12 @@ footer
     @extend %maxWidth
     @extend %center
 
+    // Responsive
+
+    +screen($md)
+
+        margin-top: $globalSpace / 2
+
     // Children
 
     ul
